Closed Bug 1777914 Opened 3 years ago Closed 3 years ago

IDBTransaction::AbortInternal doesn't send the abort message when needed

Categories

(Core :: Storage: IndexedDB, defect, P2)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- wontfix
firefox-esr102 --- wontfix
firefox102 --- wontfix
firefox103 --- fixed
firefox104 --- fixed

People

(Reporter: janv, Assigned: janv)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This is a regression introduced by bug 1598164. Especially by these two patches:
https://phabricator.services.mozilla.com/D54322
https://phabricator.services.mozilla.com/D55142

There's a code comment which describes the case when the messages needs to be sent:

  // Fire the abort event if there are no outstanding requests. Otherwise the
  // abort event will be fired when all outstanding requests finish.

I believe mReadyState should have been removed from the check.

This regression has been discovered while we were debugging bug 1775241.

We think that many existing intermittent failures are caused by this issue and probably some shutdown hangs as well.

Set release status flags based on info from the regressing bug 1598164

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
No longer blocks: 1777281

The patch landed in nightly and beta is affected.
:janv, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox103 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jvarga)

Comment on attachment 9283983 [details]
Bug 1777914 - IDBTransaction::AbortInternal doesn't send the abort message when needed; r=#dom-storage

Beta/Release Uplift Approval Request

  • User impact if declined: Higher probability of experiencing shutdown hangs.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It's a simple change and the fix has been thoroughly tested.
  • String changes made/needed: None
  • Is Android affected?: Unknown
Flags: needinfo?(jvarga)
Attachment #9283983 - Flags: approval-mozilla-beta?

Comment on attachment 9283983 [details]
Bug 1777914 - IDBTransaction::AbortInternal doesn't send the abort message when needed; r=#dom-storage

Approved for 103.0b6, thanks.

Attachment #9283983 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Duplicate of this bug: 1753790
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: