Bug 1777914 - IDBTransaction::AbortInternal doesn't send the abort message when needed; r=dom-storage-reviewers,jstutte, a=dmeehan

Transactions transition to the finished state in following cases:
1. No requests have been created and we are back at the event loop.
2. The last request has been finished.
3. A transaction has been explicitly aborted.
4. A transaction has been explicitly committed.

When a transaction is finished, we send either an abort or commit message to
the parent process.

Bug 1598164 introduced an active and inactive state, so the state can't be used
for determining if a request was created. However, this was initially
overlooked, so we ended up not sending the abort message in some cases which
led to intermittent failures.

The correct wasy to determine if the abort messages should be sent to the
parent process is to check mStarted flag only.

Differential Revision: https://phabricator.services.mozilla.com/D150937